# ciranda

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  crates-io-publish.yml  github-release.yml  publish.yml
docs/: README.md  _config.yml  blake3-argon2-dynamic.md  design.md  kdf.md  password-construction.md  security-model.md
src/: kdf.rs  lib.rs  main.rs  password_construction.rs
tests/: integration_tests.rs
