[package]
name = "ciranda"
version = "0.1.0"
description = "A deterministic password generator"
homepage = "https://w4m3r.github.io/ciranda"
repository = "https://github.com/w4m3r/ciranda"
keywords = ["cryptography", "hash", "hashing", "kdf", "password"]
categories = ["command-line-utilities", "security"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2024"
include = [
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/docs/**",
    "/src/**",
    "/tests/**",
]

[dependencies]
argon2 = "0.5"
blake3 = "1"
arboard = "3"
dialoguer = "0.12"
